<resources>
    <string name="app_name">RefereeMatch</string>
    <string name="Autor">Autor: Raul Santiago Prieto</string>
    <string name="Jugar">Jugar</string>
    <string name="Instrucciones">Instrucciones</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Informacion">Info</string>
    <string name="Nombredelprograma">Nombre del programa</string>
    <string name="Web">Web</string>
    <string name="enlaceWeb"> WWW.RaulSantiago.tech</string>
    <string name="Git">GitHub</string>
    <string name="enlaceGit"> https://github.com/raulcalleti96</string>
    <string name="Fecha">Año: 2020</string>
    <string name="Licencia"> Licencia</string>
    <string name="Logo">Logo</string>
    <string name="Personaje">Personaje</string>
    <string name="Salir">Salir</string>
    <string name="instruccionesTexto">El juego es tipo buscaminas: Cuando pulsas en una casilla,
    sale un número que identifica cuántas elementos de un árbitro hay alrededor: Ten
    cuidado porque si pulsas en una casilla que tenga un elemento escondido, perderás
    Si crees o tienes la certeza de que hay un elemento, haz un clik largo sobre la casilla
    para señalarla. No hagas un click largo en una casilla donde no hay un elemento
    porque perderás. Ganas una vez hayas encontrado al árbitro</string>
    <string name="dificultad">DIFICULTAD</string>
    <string name="info">App: RefereeMatch\n\nAutor: Raul Santiago Prieto\n\nWeb: www.raulsantiago.tech\n\n
        GitHub: https://github.com/raulcalleti96\n\nAño: 2020\n\n</string>
    <string-array name="listadoPersonajes">
        <item>Tarjeta Amarilla</item>
        <item>Tarjeta roja</item>
        <item>Silbato</item>
    </string-array>
    <string name="nav_draw_abrir">Abrir nav</string>
    <string name="nav_draw_cerrar">Cerrar nav</string>
    <string name="nivelfaciltext"> Nivel fácil</string>
    <string name="nivelfaciltiempo">Libre</string>
    <string name="nivelmediotext"> Nivel medio</string>
    <string name="nivelmediotiempo">03:00</string>
    <string name="niveldificiltext"> Nivel difícil</string>
    <string name="niveldificiltiempo">01:00</string>
    <string name="perdidatiempo">Derrota por tiempo</string>
    <string name="textoperdidatiempo">Lo sentimos, se le ha terminado el tiempo.¿Desea volver a empezar?</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>
    <string name="titulovictora">VICTORIA!</string>
    <string name="tituloderrota">DERROTA!</string>
    <string name="victoria">ENHORABUENA HA GANADO!\n ¿Desea volver a jugar?</string>
    <string name="derrota">LO SENTIMOS, HA PERDIDO!\n ¿Desea volver a jugar?</string>
</resources>
