<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:title="Inicio"
            android:icon="@mipmap/homeicon"/>
        <item
            android:id="@+id/restart"
            android:title="Empezar de nuevo"
            android:icon="@mipmap/restarticon"/>

    </group>
    <group android:checkableBehavior="single">

        <item
            android:title="Ajustes"
            >

            <menu>
                <item
                    android:id="@+id/Personaje"
                    android:title="@string/Personaje"
                    android:icon="@mipmap/personaje"/>
                <item
                    android:id="@+id/Instrucciones"
                    android:title="@string/Instrucciones"
                    android:icon="@mipmap/instrucicon"/>
                <item
                    android:id="@+id/Ajustes"
                    android:title="@string/Ajustes"
                    android:icon="@mipmap/ajustesicon"/>
                <item
                    android:id="@+id/info"
                    android:title="@string/Informacion"
                    android:icon="@mipmap/infoicon"/>
            </menu>
        </item>


    </group>
    <group android:checkableBehavior="single">

       <item
           android:title="Salir">

           <menu>
               <item
                   android:id="@+id/Salir"
                   android:title="@string/Salir"
                   android:icon="@mipmap/salidaicon"/>
           </menu>
       </item>

    </group>
</menu>