<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D1F2B"
    android:orientation="vertical">

    <Button
        android:id="@+id/botonJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Jugar"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/BotonInstruc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <Button
        android:id="@+id/BotonInstruc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Instrucciones"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/BotonAjustes"
        app:layout_constraintEnd_toEndOf="@+id/botonJugar"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/botonJugar" />

    <Button
        android:id="@+id/BotonAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="289dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Ajustes"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/BotonInstruc"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/BotonInstruc"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BotonInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Informacion"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/BotonPerson"
        app:layout_constraintStart_toStartOf="@+id/BotonPerson"
        app:layout_constraintTop_toBottomOf="@+id/BotonPerson" />

    <Button
        android:id="@+id/BotonPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Personaje"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/BotonAjustes"
        app:layout_constraintStart_toStartOf="@+id/BotonAjustes"
        app:layout_constraintTop_toBottomOf="@+id/BotonAjustes" />

    <Button
        android:id="@+id/botonSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Salir"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/BotonInfo"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/BotonInfo"
        app:layout_constraintTop_toBottomOf="@+id/BotonInfo" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/botonSalir"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="@+id/botonSalir"
        app:srcCompat="@mipmap/logore" />
</androidx.constraintlayout.widget.ConstraintLayout>