<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D1F2B">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="#1D1F2B"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:collapseIcon="@mipmap/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="189dp"
        android:fontFamily="@font/baloo"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageTitulo"
        android:layout_width="145dp"
        android:layout_height="123dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/tarjeta" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTitulo">

        <androidx.cardview.widget.CardView
            android:id="@+id/Cardjugar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26283A">

                <TextView
                    android:id="@+id/textJugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imagenJugar"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="100dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/Jugar"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imagenJugar"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="Imagen para jugar"
                    app:srcCompat="@mipmap/jugar" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardInstrucciones"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26283A">

                <TextView
                    android:id="@+id/TextIntrucciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ImagenInstrucciones"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/Instrucciones"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/ImagenInstrucciones"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="Imagen para instrucciones"
                    app:srcCompat="@mipmap/instrucciones" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_margin="10dp"
        android:layout_marginEnd="86dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.cardview.widget.CardView
            android:id="@+id/CardAjustes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26283A">

                <TextView
                    android:id="@+id/textAjustes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imagenAjustes"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="102dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/Ajustes"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imagenAjustes"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="Imagen para Ajustes"
                    app:srcCompat="@mipmap/ajustes" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/CardPersonaje"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26283A">

                <TextView
                    android:id="@+id/TextPersonaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ImagenPersonaje"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/Personaje"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/ImagenPersonaje"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="Imagen para Personaje"
                    app:srcCompat="@mipmap/personaje" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <androidx.cardview.widget.CardView
            android:id="@+id/CardInfo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_dark_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26283A">

                <TextView
                    android:id="@+id/textInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imagenInfo"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="100dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/Informacion"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imagenInfo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="Imagen para info"
                    app:srcCompat="@mipmap/informacion" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardSalir"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26283A">

                <TextView
                    android:id="@+id/TextSalir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ImagenSalir"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/Salir"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/ImagenSalir"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="Imagen para Salir"
                    app:srcCompat="@mipmap/salir" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>